# dormio

./: .dockerignore  .env.template  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
agent/: agent.py  knowledge.py  night_graph.py  observability.py  safety.py  websearch.py
data/: night_trains.json  operators.json  stop_coords.json
data/knowledge/: accommodation-classes.md  how-to-book-a-night-train.md  interrail-and-eurail-passes.md  night-train-travel-tips.md  seasons-and-booking-windows.md
data/source/bot/: agencies.json  view_ontd_cities.json  view_ontd_details.json  view_ontd_list.json  view_ontd_map.json
eval/: golden.json  run_eval.py
scripts/: ingest_open_db.py
tests/: test_agent.py  test_knowledge.py  test_night_graph.py  test_safety.py  test_ui_helpers.py
ui/: about.py  explore.py  map_view.py  night_trains.py  operator_directory.py  route_planner.py
