[project]
name = "dormio"
version = "3.0.0"
description = "An agentic-RAG assistant for Europe's night trains: a LangGraph agent that routes between a deterministic night-train graph and a ChromaDB knowledge layer, with a map of every route."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "pydeck>=0.9.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "langfuse>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
